...
        let menu = UIMenuController.shared
        if selectedLineIndex != nil {
            //make DrawView the target of menu item action messages
            becomeFirstResponder()
            
            //create a new "delete" UIMenuItem  with an action
            let deleteItem = UIMenuItem(title: "Delete",
                                        action: #selector(DrawView.deleteLine(_:)))
            menu.menuItems = [deleteItem]
            
            //tell the menu where it should come from and show it
            let targetRect = CGRect(x: point.x, y: point.y, width: 2, height: 2)
            menu.setTargetRect(targetRect, in: self)
...
